--- a/assets/scss/_items/_dropdown-feature.scss
+++ b/assets/scss/_items/_dropdown-feature.scss
@@ -4,6 +4,11 @@
     position: relative;
     text-align: center;
 
+    display: flex;
+    justify-content: center;
+
+    padding: 0.6rem 1.2rem;
+
     &:before {
       content: '';
       position: absolute;
@@ -32,11 +37,12 @@
     border: none;
   }
   span {
+    display: block;
     position: relative;
     padding-left: 2.4rem;
 
     &:before {
-      font-size: 2.6rem;
+      font-size: 1.4rem;
     }
   }
 }
@@ -46,6 +52,7 @@
   font-family: var(--font-big-serif);
   font-weight: bold;
   letter-spacing: -0.04rem;
+  line-height: 1.2;
 }
 
 
@@ -58,5 +65,22 @@
   border-bottom: 1px solid #f00;
   transition: 0.6s all ease;
   width: 0;
+}
 
+
+
+@include break(sm, max) {
+  .dropdown--feature summary span {
+    padding-left: 0;
+    padding: 1rem 1rem 1.8rem 1rem;
+
+    &:before {
+      bottom: 0;
+      left: calc(50% - 0.5em);
+      display: flex;
+      align-items: flex-end;
+      bottom: 1rem;
+      top: auto;
+    }
+  }
 }
